vlib/v/checker/tests/struct_pub_field.vv
struct Foo {
	i int
}

fn main() {
	a := Foo{
		i: 1
	}
	a.i = 2
}
